--- a/client/templates/client/client_edit_education.html
+++ b/client/templates/client/client_edit_education.html
@@ -11,8 +11,7 @@
 
 
         <ul>
-            <li class="media" rows="1" name="education" cols="30"> Учебное заведение  <input type="text" hidden name="id" value="{{ education.id }}">
-        <textarea rows="1" name="education" cols="30"></textarea></li>
+            <li class="media" rows="1" name="education" cols="30"> Учебное заведение  <input type="text"> </li>
             <li class="media" rows="1" name="education" cols="30"> Предметная область <input type="text"></li>
             <li class="media" rows="1" name="education" cols="30"> Специальность <input type="text"></li>
             <li class="media" rows="1" name="education" cols="30"> Квалификация <input type="text"></li>
