--- a/client/templates/client/client_edit_education.html
+++ b/client/templates/client/client_edit_education.html
@@ -1,37 +1,81 @@
 {% extends 'client/client_main_page.html' %}
+
 {% block title %}
     Edit education
 {% endblock %}
 
-
-
 {% block content %}
 
-    <h3>Образование</h3>
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Образование</h3>
+
+            <form method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="id_education">Учебное заведение</label>
+                    <input type="text" class="form-control" id="id_education" name="education">
+                </div>
+                <div class="form-group">
+                    <label for="id_subject_area">Предметная область</label>
+                    <input type="text" class="form-control" id="id_subject_area" name="subject_area">
+                </div>
+                <div class="form-group">
+                    <label for="id_specialization">Специальность</label>
+                    <input type="text" class="form-control" id="id_specialization" name="specialization">
+                </div>
+                <div class="form-group">
+                    <label for="id_qualification">Квалификация</label>
+                    <input type="text" class="form-control" id="id_qualification" name="qualification">
+                </div>
+                <p>Период обучения:</p>
+                <div class="form-group">
+                    <label for="id_date_start">Дата начала</label>
+                    <input type="date" class="form-control" id="id_date_start" name="date_start">
+                </div>
+                <div class="form-group">
+                    <label for="id_date_end">Дата окончания</label>
+                    <input type="date" class="form-control" id="id_date_end" name="date_end">
+                </div>
 
 
-        <ul>
-            <li class="media" rows="1" name="education" cols="30"> Учебное заведение  <input type="text"> </li>
-            <li class="media" rows="1" name="education" cols="30"> Предметная область <input type="text"></li>
-            <li class="media" rows="1" name="education" cols="30"> Специальность <input type="text"></li>
-            <li class="media" rows="1" name="education" cols="30"> Квалификация <input type="text"></li>
-            Период обучения
-            <li class="media" rows="1" name="education" cols="30"> Дата начала <input type="date" name="date_start" aria-label="date_start" id="id_date_start"> </li>
-            <li class="media" rows="1" name="education" cols="30"> Дата окончания <input type="date" name="date_end" aria-label="date_end" id="id_date_end"></li>
-            <li class="media" rows="1" name="education" cols="30"> Сертификат <input type=""></li>
-        </ul>
+                <div class="form-group">
+                    <label for="id_certificate_img">Сертификат (img)</label>
+                    <input type="file" class="form-control" id="id_certificate_img" name="certificate_img">
+                </div>
 
+                <div class="form-group">
+                    <label for="id_certificate_url">Сертификат (ссылка)</label>
+                    <input type="url" class="form-control" id="id_certificate_url" name="certificate_url">
+                </div>
 
+                <button type="submit" class="btn btn-outline-success m-sm-1" id="save">Добавить эти данные</button>
+            </form>
 
-    </form>
+           <!-- <button type="submit" class="btn btn-outline-success m-sm-1">Соранить все данные</button> -->
+        </div>
+    </div>
 
+ <div class="add_form"></div>
+<input type="button" value="Добавить образование" id="add_more" class="btn btn-outline-primary m-sm-1">
+     <button type="submit" class="btn btn-outline-success m-sm-1" id="save">Соранить все данные</button>
 
+<script>
+    $('document').ready(function () {
+        var origin = $( ".row" ).clone();
 
+        $('#add_more').on('click', function () {
+            var add_more = origin.clone();
+            for (var i = 0; i < add_more.length; i++)
+            add_more.attr('class', 'new row');
+            add_more.appendTo(".add_form")
+        });
 
+        $('#save').on('click', function () {
 
+        })
+    })
+</script>
 
- <button type="submit", formmethod="post" >Добавить</button>
-<button type="submit">Добавить образование</button>
 
 {% endblock %}
-
